SERVER-14843: Fix mongosniff for decoding messages without a namespace